# TimeManager

./: .env.example  .envexample  .gitignore  pyproject.toml
apps/manager/: admin.py  models.py  serializers.py  urls.py  views.py
apps/manager/migrations/: 0001_initial.py  0002_alter_project_id.py  0002_auto_20220517_1110.py  0002_initial.py  0003_alter_project_members.py  0004_alter_timesetting_role.py  0005_alter_timesetting_role.py
apps/managers/: models.py  permission.py  serializers.py  tests.py  urls.py  views.py
apps/managers/migrations/: 0001_initial.py  0002_alter_company_hash.py  0002_auto_20220527_0624.py  0003_alter_company_hash.py  0003_company_x_api_key.py  0004_alter_company_hash.py  0004_auto_20220527_1130.py  0005_alter_company_x_api_key.py  0005_auto_20220531_0914.py  0006_auto_20220530_0734.py  0006_auto_20220531_1042.py  0007_auto_20220530_1126.py  0007_auto_20220531_1043.py  0008_auto_20220530_1138.py  0008_auto_20220531_1052.py  0009_alter_company_hash.py  0009_auto_20220530_1159.py  0010_alter_company_hash.py  0011_alter_company_hash.py  0011_auto_20220530_1245.py  0012_auto_20220602_0711.py  0013_auto_20220602_0852.py  0014_auto_20220602_0854.py  0015_auto_20220602_0855.py  0016_auto_20220603_0757.py
apps/tenant/: helper.py  manager.py  middleware.py  mixins.py
apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_id.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py  yasg.py
(+6 files in other folders)
